--- a/local.html
+++ b/local.html
@@ -18,24 +18,15 @@
       <div class="content">
           <table class="header" style="width: 100%;">
             <tr>
-              <td style="width: 38%; text-align: center;">
-                  <ul style="list-style-type: none; float: left; list-style-type: none; text-align: center; margin: 0;">
-                      <li style="display: inline-block;"><a href="https://white-horse-5.myshopify.com/collections/wine" style="font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif; text-transform: uppercase; font-size: 10px; font-weight: bold; letter-spacing: 0.1em; text-decoration: none; color: black; margin-right: 5px;">Wine</a></li>
-                      <li style="display: inline-block;"><a href="https://white-horse-5.myshopify.com/collections/spirits" style="font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif; text-transform: uppercase; font-size: 10px; font-weight: bold; letter-spacing: 0.1em; text-decoration: none; color: black; margin-right: 5px;">Spirits</a></li>
-                      <li style="display: inline-block;"><a href="https://white-horse-5.myshopify.com/collections/beer" style="font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif; text-transform: uppercase; font-size: 10px; font-weight: bold; letter-spacing: 0.1em; text-decoration: none; color: black; margin-right: 5px;">Beer</a></li>
-                  </ul>
+              <td style="width: 38%; text-align: center;">  
                   <hr style="border-top: 1px solid black; border-bottom: 3px solid black; height: 2px; border-left: white; border-right: white; float: left; width: 100%; margin-top: 5px;">
               </td>
               <td style="width: 24%;">
-                  <div style="text-align: center;">
+                  <div style="margin: auto;">
                       <img src="https://cdn.shopify.com/s/files/1/1154/8424/files/logo.jpg?810046599697733911" />
                   </div>
               </td>
               <td style="width: 38%; text-align: center;">
-                  <ul style="list-style-type: none; float: left; list-style-type: none; text-align: center; margin: 0;">
-                      <li style="display: inline-block;"><a href="https://white-horse-5.myshopify.com/collections/housewares" style="font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif; text-transform: uppercase; font-size: 10px; font-weight: bold; letter-spacing: 0.1em; text-decoration: none; color: black; margin-right: 5px;">Housewares</a></li>
-                      <li style="display: inline-block;"><a href="https://white-horse-5.myshopify.com/collections/food" style="font-family: 'Century Gothic', CenturyGothic, AppleGothic, sans-serif; text-transform: uppercase; font-size: 10px; font-weight: bold; letter-spacing: 0.1em; text-decoration: none; color: black; margin-right: 5px;">Food</a></li>
-                  </ul>
                   <hr style="border-top: 1px solid black; border-bottom: 3px solid black; height: 2px; border-left: white; border-right: white; float: left; width: 100%; margin-top: 5px;">
               </td>
             </tr>
@@ -223,24 +214,9 @@
                         White Horse Wine and Spirits
                     </p>
 
+
                 </td>
             </tr>
-        </table>
-
-        <table style="width: 100%;">
-          <tr>
-            <td style="text-align: center; font-family: 'Courier New', Courier, 'Lucida Sans Typewriter', 'Lucida Typewriter', monospace; font-size: 100%; line-height: 1.6em; margin: 0; padding: 0; margin-bottom: 20px;">
-              67 White Horse Pike<br/>
-              Absecon, NJ 08201
-            </td>
-          </tr>
-          <tr>
-            <td style="text-align: center; padding-top: 20px;">
-              <a href="https://twitter.com/WhiteHorseWine" style="display: inline-block; height: 25px; margin-right: 20px;"><img style="width: auto; height: 20px;" src="https://cdn.shopify.com/s/files/1/1154/8424/files/Twitter.png?8409572453702782448"></a>
-              <a href="https://www.facebook.com/whitehorsewineandspirits" style="display: inline-block; height: 25px; margin-right: 20px;"><img style="width: auto; height: 20px;" src="https://cdn.shopify.com/s/files/1/1154/8424/files/Facebook.png?8409572453702782448"></a>
-              <a href="https://www.instagram.com/whitehorsewine/" style="display: inline-block;"><img style="width: auto; height: 20px; margin-right: 20px;" src="https://cdn.shopify.com/s/files/1/1154/8424/files/Instagram.png?8409572453702782448"></a>
-            </td>
-          </tr>
         </table>
     </div>
       <!-- /content -->
